--- a/index.ipynb
+++ b/index.ipynb
@@ -27,10 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pymongo\n",
+    "myclient1 = pymongo.MongoClient(\"mongodb://127.0.0.1:27017/\")\n",
+    "mydb = myclient['lab1_db']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mycollection = None"
+    "mycollection1 = mydb['lab_collection']"
    ]
   },
   {
@@ -75,19 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "customer_1 = None\n",
-    "customer_2 = None\n",
-    "customer_3 = None\n",
-    "customer_4 = None\n",
-    "customer_5 = None\n",
+    "customer_1 ={'name': 'John Smith', 'email': 'j.smith@thesmiths.com',  'address': '123 mulberry lane', 'balance': 0.0, 'notes': 'Called technical support, issue not yet resolved'}\n",
+    "customer_2 ={'name': 'Jane Smith', 'email': 'jane_smith@thesmiths.com',   'balance': 25, }\n",
+    "customer_3 ={'name': 'Adam Enba', 'email': 'adam@theflatironschool.com',  'address': '11 Broadway', 'balance': 14.99, 'notes': 'Set up on recurring billing cycle'}\n",
+    "customer_4 = {'name': 'Avi Flombaum', 'email': 'avi@theflatironschool.com',  'address': '11 Broadway', 'balance': 0.0}\n",
+    "customer_5 ={'name': 'Steven S.', 'email': 'steven.s@gmail.net\t',   'balance': -20.23, 'notes': 'Refunded for overpayment due to price match guarantee'}\n",
+    "all_records =[customer_1, customer_2, customer_3, customer_4, customer_5]\n",
     "\n",
-    "all_records = None\n",
-    "\n",
-    "insertion_results = None"
+    "insertion_results = mycollection1.insert_many(all_records)"
    ]
   },
   {
@@ -99,10 +102,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ObjectId('5d34a26d632fab910a5ad146'),\n",
+       " ObjectId('5d34a26d632fab910a5ad147'),\n",
+       " ObjectId('5d34a26d632fab910a5ad148'),\n",
+       " ObjectId('5d34a26d632fab910a5ad149'),\n",
+       " ObjectId('5d34a26d632fab910a5ad14a')]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "insertion_results.inserted_ids\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,11 +137,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('5d34a26d632fab910a5ad146'), 'name': 'John Smith', 'email': 'j.smith@thesmiths.com'}\n",
+      "{'_id': ObjectId('5d34a26d632fab910a5ad147'), 'name': 'Jane Smith', 'email': 'jane_smith@thesmiths.com'}\n",
+      "{'_id': ObjectId('5d34a26d632fab910a5ad148'), 'name': 'Adam Enba', 'email': 'adam@theflatironschool.com'}\n",
+      "{'_id': ObjectId('5d34a26d632fab910a5ad149'), 'name': 'Avi Flombaum', 'email': 'avi@theflatironschool.com'}\n",
+      "{'_id': ObjectId('5d34a26d632fab910a5ad14a'), 'name': 'Steven S.', 'email': 'steven.s@gmail.net\\t'}\n"
+     ]
+    }
+   ],
    "source": [
-    "query_1 = None\n"
+    "query_1 = mycollection1.find({}, { 'name': 1, 'email': 1})\n",
+    "for x in query_1:\n",
+    "    print(x)\n"
    ]
   },
   {
@@ -133,11 +169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('5d34a26d632fab910a5ad146'), 'name': 'John Smith', 'email': 'j.smith@thesmiths.com', 'address': '123 mulberry lane', 'balance': 0.0, 'notes': 'Called technical support, issue not yet resolved'}\n"
+     ]
+    }
+   ],
    "source": [
-    "query_2 = None\n"
+    "query_2 = mycollection1.find( { 'name':'John Smith'})\n",
+    "for x in query_2:\n",
+    "    print(x)\n"
    ]
   },
   {
@@ -151,11 +197,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('5d34a26d632fab910a5ad147'), 'name': 'Jane Smith', 'email': 'jane_smith@thesmiths.com', 'balance': 25}\n",
+      "{'_id': ObjectId('5d34a26d632fab910a5ad148'), 'name': 'Adam Enba', 'email': 'adam@theflatironschool.com', 'balance': 14.99}\n"
+     ]
+    }
+   ],
    "source": [
-    "query_3 = None\n"
+    "query_3 = mycollection1.find({\"balance\": {\"$gt\": 0}}, {'name':1, 'email':1, 'balance':1})\n",
+    "for x in query_3:\n",
+    "    print(x)"
    ]
   },
   {
@@ -169,12 +226,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('5d34a26d632fab910a5ad14a'), 'name': 'Steven S.', 'email': 'steven.s@gmail.net\\t', 'balance': -20.23, 'notes': 'Refunded for overpayment due to price match guarantee', 'address': '367 55th St., apt 2A'}\n"
+     ]
+    }
+   ],
    "source": [
-    "record_to_update_1 = None\n",
-    "update_1 = None\n"
+    "record_to_update = {'name':'Steven S.'}\n",
+    "update_1 = {'$set': {'address': '367 55th St., apt 2A'}}\n",
+    "\n",
+    "\n",
+    "mycollection1.update_one(record_to_update, update_1)\n",
+    "\n",
+    "query_4 = mycollection1.find({'name':'Steven S.'})\n",
+    "for item in query_4:\n",
+    "    print(item)"
    ]
   },
   {
@@ -186,11 +258,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('5d34a176632fab910a5ad134'), 'name': 'Steven S.', 'email': 'steven.s@gmail.net\\t', 'balance': -20.23, 'notes': 'Refunded for overpayment due to price match guarantee', 'address': '367 55th St., apt 2A', 'test': 'dfafa', 'birthday': '08/30/1991'}\n",
+      "{'_id': ObjectId('5d34a19c632fab910a5ad139'), 'name': 'Steven S.', 'email': 'steven.s@gmail.net\\t', 'balance': -20.23, 'notes': 'Refunded for overpayment due to price match guarantee'}\n",
+      "{'_id': ObjectId('5d34a1fe632fab910a5ad13e'), 'name': 'Steven S.', 'email': 'steven.s@gmail.net\\t', 'balance': -20.23, 'notes': 'Refunded for overpayment due to price match guarantee'}\n",
+      "{'_id': ObjectId('5d34a248632fab910a5ad144'), 'name': 'Steven S.', 'email': 'steven.s@gmail.net\\t', 'balance': -20.23, 'notes': 'Refunded for overpayment due to price match guarantee'}\n"
+     ]
+    }
+   ],
    "source": [
-    "query_4 =None\n"
+    "\n",
+    "record_to_update1 = {'name':'Steven S.'}\n",
+    "update_2 = {'$set':{'test': 'dfafa'}}\n",
+    "\n",
+    "\n",
+    "mycollection.update_one(record_to_update1, update_2)\n",
+    "\n",
+    "query_5= mycollection.find({'name':'Steven S.'})\n",
+    "for item in query_5:\n",
+    "    print(item)"
    ]
   },
   {
@@ -220,17 +312,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "names_list = None\n",
-    "birthdays_list = None\n",
+    "names_list = ['John Smith','Jane Smith','Adam Enbar','Avi Flombaum','Steven S.']\n",
+    "birthdays_list = ['02/20/1986','07/07/1983','12/02/1982', '04/17/1983', '08/30/1991']\n",
+    "\n",
     "\n",
     "def update_birthdays(names, birthdays):\n",
-    "    pass\n",
-    "        \n",
-    "update_birthdays(names_list, birthdays_list)"
+    "        for  i,name in enumerate(names) :\n",
+    "            birthday=birthdays[i]\n",
+    "            record_to_update = {'name':name}\n",
+    "            update_1 = {'$set': {'birthday': birthday}}\n",
+    "            mycollection.update_one(record_to_update, update_1)\n",
+    "           \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -238,6 +336,44 @@
    "metadata": {},
    "source": [
     "Now, write a query to check your work and see that the birthdays were added correctly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('5d34a176632fab910a5ad131'), 'name': 'Jane Smith', 'email': 'jane_smith@thesmiths.com', 'balance': 25, 'birthday': '07/07/1983'}\n",
+      "{'_id': ObjectId('5d34a176632fab910a5ad132'), 'name': 'Adam Enba', 'email': 'adam@theflatironschool.com', 'address': '11 Broadway', 'balance': 14.99, 'notes': 'Set up on recurring billing cycle'}\n",
+      "{'_id': ObjectId('5d34a176632fab910a5ad133'), 'name': 'Avi Flombaum', 'email': 'avi@theflatironschool.com', 'address': '11 Broadway', 'balance': 0.0, 'birthday': '04/17/1983'}\n",
+      "{'_id': ObjectId('5d34a176632fab910a5ad134'), 'name': 'Steven S.', 'email': 'steven.s@gmail.net\\t', 'balance': -20.23, 'notes': 'Refunded for overpayment due to price match guarantee', 'address': '367 55th St., apt 2A', 'test': 'dfafa', 'birthday': '08/30/1991'}\n",
+      "{'_id': ObjectId('5d34a19c632fab910a5ad135'), 'name': 'John Smith', 'email': 'j.smith@thesmiths.com', 'address': '123 mulberry lane', 'balance': 0.0, 'notes': 'Called technical support, issue not yet resolved', 'birthday': '02/20/1986'}\n",
+      "{'_id': ObjectId('5d34a19c632fab910a5ad136'), 'name': 'Jane Smith', 'email': 'jane_smith@thesmiths.com', 'balance': 25}\n",
+      "{'_id': ObjectId('5d34a19c632fab910a5ad137'), 'name': 'Adam Enba', 'email': 'adam@theflatironschool.com', 'address': '11 Broadway', 'balance': 14.99, 'notes': 'Set up on recurring billing cycle'}\n",
+      "{'_id': ObjectId('5d34a19c632fab910a5ad138'), 'name': 'Avi Flombaum', 'email': 'avi@theflatironschool.com', 'address': '11 Broadway', 'balance': 0.0}\n",
+      "{'_id': ObjectId('5d34a19c632fab910a5ad139'), 'name': 'Steven S.', 'email': 'steven.s@gmail.net\\t', 'balance': -20.23, 'notes': 'Refunded for overpayment due to price match guarantee'}\n",
+      "{'_id': ObjectId('5d34a1fe632fab910a5ad13a'), 'name': 'John Smith', 'email': 'j.smith@thesmiths.com', 'address': '123 mulberry lane', 'balance': 0.0, 'notes': 'Called technical support, issue not yet resolved'}\n",
+      "{'_id': ObjectId('5d34a1fe632fab910a5ad13b'), 'name': 'Jane Smith', 'email': 'jane_smith@thesmiths.com', 'balance': 25}\n",
+      "{'_id': ObjectId('5d34a1fe632fab910a5ad13c'), 'name': 'Adam Enba', 'email': 'adam@theflatironschool.com', 'address': '11 Broadway', 'balance': 14.99, 'notes': 'Set up on recurring billing cycle'}\n",
+      "{'_id': ObjectId('5d34a1fe632fab910a5ad13d'), 'name': 'Avi Flombaum', 'email': 'avi@theflatironschool.com', 'address': '11 Broadway', 'balance': 0.0}\n",
+      "{'_id': ObjectId('5d34a1fe632fab910a5ad13e'), 'name': 'Steven S.', 'email': 'steven.s@gmail.net\\t', 'balance': -20.23, 'notes': 'Refunded for overpayment due to price match guarantee'}\n",
+      "{'_id': ObjectId('5d34a248632fab910a5ad140'), 'name': 'John Smith', 'email': 'j.smith@thesmiths.com', 'address': '123 mulberry lane', 'balance': 0.0, 'notes': 'Called technical support, issue not yet resolved'}\n",
+      "{'_id': ObjectId('5d34a248632fab910a5ad141'), 'name': 'Jane Smith', 'email': 'jane_smith@thesmiths.com', 'balance': 25}\n",
+      "{'_id': ObjectId('5d34a248632fab910a5ad142'), 'name': 'Adam Enba', 'email': 'adam@theflatironschool.com', 'address': '11 Broadway', 'balance': 14.99, 'notes': 'Set up on recurring billing cycle'}\n",
+      "{'_id': ObjectId('5d34a248632fab910a5ad143'), 'name': 'Avi Flombaum', 'email': 'avi@theflatironschool.com', 'address': '11 Broadway', 'balance': 0.0}\n",
+      "{'_id': ObjectId('5d34a248632fab910a5ad144'), 'name': 'Steven S.', 'email': 'steven.s@gmail.net\\t', 'balance': -20.23, 'notes': 'Refunded for overpayment due to price match guarantee'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "update_birthdays(names_list, birthdays_list)\n",
+    "query_6 = mycollection.find({})\n",
+    "for item in query_6:\n",
+    "    print(item)\n"
    ]
   },
   {
@@ -257,6 +393,20 @@
     "\n",
     "In this lesson, we got some hands-on practice working with MongoDB!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -275,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
